@@ -57,6 +57,7 @@ SqlPodcastProvider::SqlPodcastProvider()
     , m_removeAction( 0 )
     , m_renameAction( 0 )
     , m_updateAction( 0 )
+    , m_writeTagsAction( 0 )
 {
     connect( m_updateTimer, SIGNAL( timeout() ), SLOT( autoUpdate() ) );
 
@@ -370,6 +371,18 @@ SqlPodcastProvider::episodeActions( Meta::PodcastEpisodeList episodes )
         m_deleteAction->setProperty( "popupdropper_svg_id", "delete" );
         connect( m_deleteAction, SIGNAL( triggered() ), this, SLOT( slotDeleteEpisodes() ) );
     }
+
+    if( m_writeTagsAction == 0 )
+    {
+        m_writeTagsAction = new QAction(
+            KIcon( "media-track-edit-amarok" ),
+            i18n( "&Write Feed Information to File" ),
+            this
+        );
+        m_writeTagsAction->setProperty( "popupdropper_svg_id", "edit" );
+        connect( m_deleteAction, SIGNAL( triggered() ), this, SLOT( slotWriteTagsToFile() ) );
+    }
+
     bool hasDownloaded = false;
     foreach( Meta::PodcastEpisodePtr episode, episodes )
     {
@@ -387,6 +400,7 @@ SqlPodcastProvider::episodeActions( Meta::PodcastEpisodeList episodes )
     if( hasDownloaded )
     {
         actions << m_deleteAction;
+        actions << m_writeTagsAction;
     }
     else
     {
@@ -526,6 +540,22 @@ SqlPodcastProvider::slotDownloadProgress( KJob *job, unsigned long percent )
 
     emit totalPodcastDownloadProgress(
             totalDownloadPercentage / (m_downloadJobMap.count() + m_completedDownloads) );
+}
+
+void
+SqlPodcastProvider::slotWriteTagsToFiles()
+{
+    Meta::PodcastEpisodeList episodes = The::podcastModel()->selectedEpisodes();
+    debug() << episodes.count() << " episodes selected";
+    foreach( Meta::PodcastEpisodePtr episode, episodes )
+    {
+        Meta::SqlPodcastEpisodePtr sqlEpisode =
+                Meta::SqlPodcastEpisodePtr::dynamicCast( episode );
+         if( !sqlEpisode )
+             continue;
+
+        sqlEpisode->writeTagsToFile();
+    }
 }
 
 void
