@@ -96,6 +96,7 @@ class SqlPodcastProvider : public PodcastProvider, public EngineObserver
         void slotRemoveChannels();
         void slotUpdateChannels();
         void slotDownloadProgress( KJob *job, unsigned long percent );
+        void slotWriteTagsToFiles();
 
     signals:
         void updated();
@@ -121,6 +122,7 @@ class SqlPodcastProvider : public PodcastProvider, public EngineObserver
         QAction * m_removeAction; //remove a subscription
         QAction * m_renameAction; //rename a Channel or Episode
         QAction * m_updateAction;
+        QAction * m_writeTagsAction; //write feed information to downloaded file
 };
 
 #endif
